validação GET/ swagger
