# swagger_output.json
@@ -51,7 +51,7 @@
           "finanças"
         ],
         "summary": "Retorna as despesas com base no userid e queries",
-        "description": "Utilize o userid, para retornar as despesas do usuário, podendo usar uma das queries para retornar por mês ou por tipo, se as duas queries estiverem preenchidas retornará apenas por mês.",
+        "description": "Utilize o userid, para retornar as despesas do usuário, podendo usar uma das queries para retornar por mês/ano, Ex:Setembro/2022, ou por tipo, Ex:groceries, se as duas queries estiverem preenchidas retornará apenas por mês/ano. Retorna erro adequado caso o usuário não exista.",
         "parameters": [
           {
             "name": "userid",
@@ -60,7 +60,7 @@
             "type": "string"
           },
           {
-            "name": "bymonth",
+            "name": "bymonthyear",
             "in": "query",
             "type": "string"
           },
